--- a/circle.yml
+++ b/circle.yml
@@ -13,4 +13,4 @@ database:
 
 test:
   override:
-    - bundle exec rspec
+    - bundle exec rspec -r rspec_junit_formatter --format RspecJunitFormatter -o $CIRCLE_TEST_REPORTS/rspec/junit.xml
