--- a/circle.yml
+++ b/circle.yml
@@ -13,7 +13,7 @@ database:
 
 test:
   override:
-    - bundle exec rspec -r rspec_junit_formatter --format RspecJunitFormatter -o $CIRCLE_TEST_REPORTS/rspec/junit.xml:
+    - bundle exec rspec --format RspecJunitFormatter --out $CIRCLE_TEST_REPORTS/rspec.xml:
         parallel: true
         files:
           - spec/**/*_spec.rb
